--- a/styles.css
+++ b/styles.css
@@ -45,7 +45,7 @@ html, body {
 }
 
 #about, #works {
-   display: none;
+   display: flex;
 }
 
 /* Navigation ---------------------------------------------------------------------------------------- */
